# fri-pseudocodes

./: .gitignore  CMakeLists.txt  README.md  ast.sh  settings.txt  style.ini
.cache/clangd/index/: abstract_code.cpp.AE5E4AD4CE0BCAFB.idx  abstract_code.hpp.41425D84D1B2B597.idx  clang_class_visitor.cpp.E09EF2D7C376D44A.idx  clang_class_visitor.hpp.5FE2117A3CF44E71.idx  clang_expression_visitor.cpp.D626D2869AEAC96F.idx  clang_expression_visitor.hpp.5427FB5BF28D57EB.idx  clang_source_parser.cpp.C546FAA38ECFEA86.idx  clang_source_parser.hpp.DD464D815A3A8AE3.idx  clang_statement_visitor.cpp.44A4F23C911D8A76.idx  clang_statement_visitor.hpp.E184908645135E34.idx  clang_utils.cpp.DAC169B21788B875.idx  clang_utils.hpp.F0F7CCEA38BBEBA1.idx  code_generator.cpp.1ED41879259C100F.idx  code_generator.hpp.A1A7E85012C3D281.idx  code_output.cpp.25250A666C53B909.idx  code_output.hpp.7716E68B2AAE3D6E.idx  main.cpp.9D1E5A0010A38E3F.idx  types.hpp.87B6B53CC9113A72.idx  utils.cpp.01C3B4436DACFCB9.idx  utils.hpp.10725E4B161291B8.idx
input/: example_1.cpp  example_1.hpp
libtuor/: CMakeLists.txt  abstract_code.cpp  abstract_code.hpp  clang_class_visitor.cpp  clang_class_visitor.hpp  clang_expression_visitor.cpp  clang_source_parser.cpp  clang_statement_visitor.cpp  clang_utils.cpp  code_generator.cpp  code_generator.hpp  code_output.cpp  code_output.hpp  main.cpp  types.hpp  utils.cpp  utils.hpp
src/: abstract_code.cpp  abstract_code.hpp  clang_class_visitor.cpp  clang_class_visitor.hpp  clang_expression_visitor.cpp  clang_expression_visitor.hpp  clang_source_parser.cpp  clang_source_parser.hpp  clang_statement_visitor.cpp  clang_statement_visitor.hpp  clang_utils.cpp  clang_utils.hpp  code_generator.cpp  code_generator.hpp  cxx_source_parser.cpp  cxx_source_parser.hpp  main.cpp  types.hpp  utils.hpp
tuor/: CMakeLists.txt  main.cpp
